--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,14 @@
         "php": "^8.1",
         "cviebrock/eloquent-sluggable": "^10.0",
         "diglactic/laravel-breadcrumbs": "^8.0",
+        "doctrine/dbal": "^3.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/fortify": "^1.13",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "doctrine/dbal": "^3.0",
         "laravel/tinker": "^2.5",
         "spatie/laravel-permission": "^5.5",
+        "tymon/jwt-auth": "^2.2",
         "yajra/laravel-datatables": "^10.0",
         "yajra/laravel-datatables-buttons": "^10.0",
         "yajra/laravel-datatables-html": "^10.0"
